Rend 0.9.0 changelog:

Gameplay:
* Added a new game mode - Single-flag CTF
	* Bots can play CTF in teams
	* New map type is available in the editor
* Added new CTF map: "CTF Garden"
	* Can be played in both 1:1 and 2:2

Misc:
* Underlying AI framework updated to version 2.1.0

Rend 0.8.0 changelog:

Gameplay:
* Added a new 4-player map: "Digital Nexus"
* Flaregun applies damage over time
* When armor is above 100, it absorbs more damage
* Tweaked damage numbers for flaregun and trishot

UX:
* Game setup screen now shows the server IP

Bugfixes:
* Fixed a bug where AI would not move in an completely empty level

Rend 0.7.0 changelog:

Gameplay:
* Added new decorative items - water fountain, ceiling wires, alien artifact
* Slightly repositioned spawn-pickups on 2p_greenpath
* Reworked central storage area on 3p_shotgun_frenzy to allow better maneuverability
* Bots are more likely to equip laser crossbows and rocket launchers
* Bot movement was tweaked to be more varied, hopefully for the better
* Bots are slightly more likely to miss
* Shotgun spread slightly increased
* Improved spawn-picking algorithm
* 4p_neon was tweaked to be less shitty
* Removed the blob left after exploded flare projectile

UX:
* UI can be navigated with gamepad (mouse cursor can be moved with left stick)

Bugfixes:
* Fixed a graphical glitch where low ceilings could be rendered outside of the actual ceiling

Rend 0.6.0 changelog:

Gameplay:
* Added a new 3-player map: "Lasertag"

UX:
* Last IP that was succesfully used to join a networked game is remembered and pre-filled in the Join game screen
* If server hosts a map that peer doesn't have, that map will be downloaded
* Join game dialog is now a modal window
	* Text input for IP is autofocused
* Gamepad button A can be used to confirm UI dialogs and B button can be used to go back

Bugfixes:
* Fixed graphical glitch in editor that shows in place of the sidebar until a map is opened